<resources>
    <string name="app_name">ChordTrain</string>
    <string name="select_sequence_length">Select length:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="select_key">Select key:</string>
    <string name="select_difficulty">Select difficulty:</string>
    <string name="start">Start</string>
    <string name="stats">Stats</string>
    <string name="statistics">Statistics</string>
    <string name="play">Playback</string>
    <string name="check">Check</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
</resources>